@@ -261,12 +261,13 @@ public final class IncProjectBuilder {
   }
 
   private void checkRebuildRequired(final CompileScope scope) throws RebuildRequestedException {
-    if (myIsTestMode) {
+    if (myIsTestMode || isAutoBuild()) {
       // do not use the heuristic in tests in order to properly test all cases
+      // automatic builds should not cause start full project rebuilds to avoid situations when rebuild is not expected by user
       return;
     }
     final BuildTargetsState targetsState = myProjectDescriptor.getTargetsState();
-    final long timeThreshold = targetsState.getLastSuccessfulRebuildDuration() * 95 / 100; // 95% of last registered clean rebuild time
+    final long timeThreshold = targetsState.getLastSuccessfulRebuildDuration();
     if (timeThreshold <= 0) {
       return; // no stats available
     }
@@ -387,9 +388,12 @@ public final class IncProjectBuilder {
     }
   }
 
-  private static boolean isParallelBuild(CompileContext context) {
-    return Boolean.parseBoolean(context.getBuilderParameter(BuildParametersKeys.IS_AUTOMAKE)) ?
-           BuildRunner.isParallelBuildAutomakeEnabled() : BuildRunner.isParallelBuildEnabled();
+  private boolean isAutoBuild() {
+    return Boolean.parseBoolean(myBuilderParams.get(BuildParametersKeys.IS_AUTOMAKE));
+  }
+
+  private boolean isParallelBuild() {
+    return isAutoBuild() ? BuildRunner.isParallelBuildAutomakeEnabled() : BuildRunner.isParallelBuildEnabled();
   }
 
   private void runBuild(final CompileContextImpl context, boolean forceCleanCaches) throws ProjectBuildException {
@@ -400,7 +404,7 @@ public final class IncProjectBuilder {
              "; isMake:" +
              context.isMake() +
              " parallel compilation:" +
-             isParallelBuild(context));
+             isParallelBuild());
 
     context.addBuildListener(new ChainedTargetsBuildListener(context));
 
@@ -691,7 +695,7 @@ public final class IncProjectBuilder {
   private static Set<BuildTarget<?>> getTargetsWithClearedOutput(CompileContext context) {
     synchronized (TARGET_WITH_CLEARED_OUTPUT) {
       Set<BuildTarget<?>> data = context.getUserData(TARGET_WITH_CLEARED_OUTPUT);
-      return data != null? Collections.unmodifiableSet(new HashSet<>(data)) : Collections.emptySet();
+      return data != null ? Set.copyOf(data) : Collections.emptySet();
     }
   }
 
@@ -865,7 +869,7 @@ public final class IncProjectBuilder {
   private void buildChunks(final CompileContextImpl context, BuildProgress buildProgress) throws ProjectBuildException {
     try {
 
-      boolean compileInParallel = isParallelBuild(context);
+      boolean compileInParallel = isParallelBuild();
       if (compileInParallel && MAX_BUILDER_THREADS <= 1) {
         LOG.info("Switched off parallel compilation because maximum number of builder threads is less than 2. Set '"
                  + GlobalOptions.COMPILE_PARALLEL_MAX_THREADS_OPTION + "' system property to a value greater than 1 to really enable parallel compilation.");
